# dfanalyzer

./: .gitignore  README.md  meson.build  pyproject.toml  streamlit_app.py
.github/workflows/: ci.yml
dfanalyzer/: __init__.py  __main__.py  analysis_utils.py  analyzer.py  analyzer_result.py  cluster.py  config.py  constants.py  darshan.py  dftracer.py  meson.build  metrics.py  output.py  recorder.py  rules.py  types.py
dfanalyzer/utils/: dask_agg.py  dask_utils.py  meson.build  pandas_agg.py  pandas_utils.py  streaming.py
docs/: configuration.rst  getting-started.rst  index.rst  interactive-analysis.rst
notebooks/: .gitignore  analysis_dftracer_unet3d_v100_hdf5.ipynb
tests/: test_main.py  test_streaming.py
tools/: meson.build  recorder2parquet.cpp
