py.install_sources(
    [
        '__init__.py',
        '__main__.py',
        'analysis.py',
        'analysis_utils.py',
        'analyzer.py',
        'cluster.py',
        'config.py',
        'constants.py',
        'darshan.py',
        'dftracer.py',
        'metrics.py',
        'output.py',
        'plots.py',
        'recorder.py',
        'types.py',
    ],
    subdir: 'dfanalyzer',
)

subdir('utils')